--- a/app/src/main/res/layout/activity_video_get.xml
+++ b/app/src/main/res/layout/activity_video_get.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MusicGetActivity">
+    tools:context=".activities.VideoGetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,32 +12,43 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/et_music_url"
+            android:id="@+id/et_video_url"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:ems="10"
-            android:hint="@string/input_url"
+            android:hint="@string/input_bv"
             android:inputType="textUri|textMultiLine"
             android:minHeight="48dp" />
 
+        <EditText
+            android:id="@+id/et_video_p"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:ems="10"
+            android:hint="@string/input_p"
+            android:inputType="number"
+            android:minHeight="48dp" />
+
         <Button
-            android:id="@+id/btn_music_start"
+            android:id="@+id/btn_video_resolve"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="@string/start" />
 
         <ProgressBar
-            android:id="@+id/pgbar_music_download"
-            style="@style/Widget.AppCompat.ProgressBar"
+            android:id="@+id/pgbar_video_download"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
+            android:layout_margin="10dp"
+            android:indeterminate="false"
             android:visibility="gone" />
 
         <TextView
-            android:id="@+id/text_music_log"
+            android:id="@+id/text_video_log"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp" />
