--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="p4">#774DE3</color>
     <color name="p5">#5756FD</color>
 
+    <color name="green">#00ff00</color>
+
 </resources>
