Improve the behavior of download management page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="p3">#B562FA</color>
     <color name="p4">#774DE3</color>
     <color name="p5">#5756FD</color>
+    <color name="p6">#3F51B5</color>
 
     <color name="green">#00ff00</color>
 
